# knowledge-base-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  LEARNINGS.md  PLAN.md  README.md  STARTING-PROMPT.md  TASKS.md  config.toml  install.sh  main.py  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  kbd.py
core/: config.py  db.py  experiment_parser.py  git_scanner.py  insight_engine.py  pattern_engine.py
docs/: autoresearch_format.md
export/: html_report.py
models/: db_rows.py  experiment.py  insight.py  pattern.py  repo.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/fixtures/: generate_large_jsonl.py  large_jsonl.jsonl  sample_autoresearch.jsonl
tests/fixtures/mixed_stack_repo/: package.json  pyproject.toml
tests/fixtures/synthetic_repo/: README.md  package.json
tests/integration/: test_export.py  test_full_scan.py
tests/unit/: test_experiment_parser.py  test_git_scanner.py  test_pattern_engine.py
ui/: dashboard.py
ui/tabs/: experiments.py  overview.py  patterns.py  repos.py  timeline.py
