[project]
name = "knowledge-base-dashboard"
version = "0.1.1"
description = "Interactive TUI dashboard for git history and experiment analytics"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "git", "tui", "dashboard", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.55.0",
    "gitpython>=3.1.40",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "plotly>=5.20.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomli>=2.0.1",
]

[[project.authors]]
name = "Joshua Knox"
email = "joshua.knox@fhlbtopeka.com"

[project.urls]
Homepage = "https://github.com/bigknoxy/knowledge-base-dashboard"
Repository = "https://github.com/bigknoxy/knowledge-base-dashboard"
"Bug Tracker" = "https://github.com/bigknoxy/knowledge-base-dashboard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
kbd = "cli.kbd:app"

[tool.setuptools]
packages = [
    "cli",
    "core",
    "models",
    "ui",
    "ui.tabs",
    "ui.components",
    "export",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
